# spdx

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  release.toml
.cargo/: config.toml
.ci/: test.sh
.github/workflows/: ci.yaml  publish.yaml
src/: allowed.rs  detection.rs  error.rs  expression.rs  identifiers.rs  lexer.rs  lib.rs  licensee.rs  parser.rs  text.rs
src/detection/: cache.bin.zstd  cache.rs  detect.rs  inline-cache.rs  inline_cache.rs  license.rs  ngram.rs  preproc.rs  scan.rs
src/expression/: minimize.rs  mod.rs  parser.rs
src/text/: AFL-1.1  AGPL-3.0-only  AML  APSL-2.0  Afmparse  Aladdin  Apache-1.0  Artistic-2.0  BSD-1-Clause  BSD-2-Clause-FreeBSD  BSD-2-Clause-NetBSD  BSD-2-Clause-Patent  BSD-3-Clause-No-Nuclear-License-2014  BSD-Source-Code  Barr  BlueOak-1.0.0  C-UDA-1.0  CAL-1.0  CC-BY-2.0  CC-BY-3.0  CC-BY-3.0-AT  CC-BY-3.0-NL  CC-BY-3.0-US  CC-BY-NC-ND-3.0  CC-BY-NC-SA-2.0-FR  CC-BY-NC-SA-3.0-IGO  CC-BY-NC-SA-4.0  CC-BY-ND-1.0  CC-BY-SA-3.0  CC-BY-SA-3.0-DE  CC0-1.0  CDLA-Sharing-1.0  CECILL-2.0  CECILL-2.1  CNRI-Jython  DOC  DRL-1.0  Dotseqn  ECL-2.0  EPICS  (+66 more)
src/text/exceptions/: 389-exception  Asterisk-exception  Asterisk-linking-protocols-exception  Autoconf-exception-2.0  Autoconf-exception-3.0  Autoconf-exception-generic  Autoconf-exception-generic-3.0  Autoconf-exception-macro  Bison-exception-1.24  Bison-exception-2.2  Bootloader-exception  CGAL-linking-exception  CLISP-exception-2.0  Classpath-exception-2.0  Classpath-exception-2.0-short  DigiRule-FOSS-exception  Digia-Qt-LGPL-exception-1.1  FLTK-exception  Fawkes-Runtime-exception  Font-exception-2.0  GCC-exception-2.0  GCC-exception-2.0-note  GCC-exception-3.1  GNAT-exception  GNOME-examples-exception  GNU-compiler-exception  GPL-3.0-389-ds-base-exception  GPL-3.0-interface-exception  GPL-3.0-linking-exception  GPL-3.0-linking-source-exception  GPL-CC-1.0  GStreamer-exception-2005  GStreamer-exception-2008  Gmsh-exception  Independent-modules-exception  KiCad-libraries-exception  LGPL-3.0-linking-exception  LLGPL  LLVM-exception  LZMA-exception  (+44 more)
src/text/licenses/: 0BSD  3D-Slicer-1.0  AAL  ADSL  AFL-1.2  AFL-2.0  AFL-2.1  AFL-3.0  AGPL-1.0  ALGLIB-Documentation  AMD-newlib  AMDPLPA  AML-glslang  AMPAS  ANTLR-PD  ANTLR-PD-fallback  APAFML  APL-1.0  APSL-1.0  APSL-1.1  APSL-1.2  ASWF-Digital-Assets-1.0  ASWF-Digital-Assets-1.1  Abstyles  AdaCore-doc  Adobe-2006  Adobe-Display-PostScript  Adobe-Glyph  Adobe-Utopia  Advanced-Cryptics-Dictionary  Apache-1.1  Apache-2.0  App-s2p  Arphic-1999  Artistic-1.0  Artistic-1.0-Perl  Artistic-1.0-cl8  Artistic-dist  Aspell-RU  BOLA-1.1  (+558 more)
tests/: check.rs  detection.rs  lexer.rs  spdx_list.rs  validation.rs
update/: Cargo.toml
update/src/: imprecise.rs  main.rs
