[package]
name = "spdx"
version = "0.10.0"
authors = [
    "Embark <opensource@embark-studios.com>",
    "Jake Shadle <jake.shadle@embark-studios.com>",
]
description = "Helper crate for SDPX expressions"
edition = "2021"
rust-version = "1.65.0"
homepage = "https://github.com/EmbarkStudios/spdx"
documentation = "https://docs.rs/spdx"
readme = "README.md"
keywords = ["spdx", "license"]
categories = ["parser-implementations"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/spdx"
include = [
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "src/**/*",
]

[features]
# Includes the full canonical text of each license
text = []

[dependencies]
# In most cases expressions are quite small so we can avoid heap allocations
smallvec = "1.7"

[dev-dependencies]
# Used to print colored diffs in case of test failures
similar-asserts = "1.1"

[package.metadata.docs.rs]
all-features = true
