[package]
name = "spdx"
version = "0.13.0"
authors = [
    "Embark <opensource@embark-studios.com>",
    "Jake Shadle <jake.shadle@embark-studios.com>",
]
description = "Helper crate for SPDX expressions"
edition = "2024"
rust-version = "1.85.0"
homepage = "https://github.com/EmbarkStudios/spdx"
documentation = "https://docs.rs/spdx"
readme = "README.md"
keywords = ["spdx", "license"]
categories = ["parser-implementations"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/spdx"
include = [
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "src/**/*",
]

[features]
# Includes the full canonical text of each license
text = []
# Allows analysis of text to determine if it might be an SPDX license text
detection = ["regex", "unicode-normalization"]
# Allows de/serialization of a spdx::detection::Store for quicker loading
detection-cache = ["detection", "zstd"]
# Inlines a cache into this crate, which contains all of the licenses from the
# SPDX crate that the crate version was packaged with
detection-inline-cache = ["detection-cache"]
# Performs license detection in parallel within the same text
detection-parallel = ["detection", "rayon"]

[dependencies]
rayon = { version = "1.11", optional = true }
regex = { version = "1.12", optional = true }
# In most cases expressions are quite small so we can avoid heap allocations
smallvec = "1.15"
unicode-normalization = { version = "0.1", optional = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
# Used to print colored diffs in case of test failures
similar-asserts = "1.7"

[package.metadata.docs.rs]
all-features = true
